package com.lishi.adruino.randompoetry.view;

public interface MainPageView {
    void toMainActivity(String mainTitle);
}
